@@ -44,6 +44,9 @@ BUG FIXES IN 1.9
 
 IMPROVEMENTS AND NEW FEATURES IN 1.9
 ====================================
+* [CONFIGURATION-503]
+  Small changes in user guide documentation.
+
 * [CONFIGURATION-502]
   Improvements of basic features and AbstractConfiguration documentation.
 
